--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "12.23.25",
+    "gsap": "^3.14.2",
     "input-otp": "1.4.1",
     "lenis": "1.3.15",
     "lucide-react": "^0.454.0",
